--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=api-gateway
+server.port=8080
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
@@ -8,4 +9,19 @@ logging.level.org.springframework.cloud.gateway=TRACE
 ## Product Service
 spring.cloud.gateway.routes[0].id=product-service
 spring.cloud.gateway.routes[0].uri=lb://product-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/product/**
+spring.cloud.gateway.routes[0].predicates=Path=/product/**,/category/**
+
+## Order Service
+spring.cloud.gateway.routes[1].id=order-service
+spring.cloud.gateway.routes[1].uri=lb://order-service
+spring.cloud.gateway.routes[1].predicates=Path=/order
+
+## Inventory Service
+spring.cloud.gateway.routes[2].id=inventory-service
+spring.cloud.gateway.routes[2].uri=lb://inventory-service
+spring.cloud.gateway.routes[2].predicates=Path=/inventory
+
+## User Service
+spring.cloud.gateway.routes[3].id=user-service
+spring.cloud.gateway.routes[3].uri=lb://user-service
+spring.cloud.gateway.routes[3].predicates=Path=/user
