introducing docker and keycloak

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.org.springframework.cloud.gateway=TRACE
 ## Product Service
 spring.cloud.gateway.routes[0].id=product-service
 spring.cloud.gateway.routes[0].uri=lb://product-service
-spring.cloud.gateway.routes[0].predicates=Path=/product/**,/category/**
+spring.cloud.gateway.routes[0].predicates=Path=/product/**
 
 ## Order Service
 spring.cloud.gateway.routes[1].id=order-service
@@ -25,3 +25,6 @@ spring.cloud.gateway.routes[2].predicates=Path=/inventory
 spring.cloud.gateway.routes[3].id=user-service
 spring.cloud.gateway.routes[3].uri=lb://user-service
 spring.cloud.gateway.routes[3].predicates=Path=/user
+
+##Spring security - Gateway che comunica con KeyCloak
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-ecomm-project
