--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=api-gateway
 server.port=8080
 
@@ -9,7 +9,7 @@ logging.level.org.springframework.cloud.gateway=TRACE
 ## Product Service
 spring.cloud.gateway.routes[0].id=product-service
 spring.cloud.gateway.routes[0].uri=lb://product-service
-spring.cloud.gateway.routes[0].predicates=Path=/product/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/product/**
 
 ## Order Service
 spring.cloud.gateway.routes[1].id=order-service
