--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -8,4 +8,28 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=0
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.instanceId = ${spring.application.name}:${server.port}
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+
+management.health.circuitbreakers.enable=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+##Indicatore di "Stato"
+resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
+##
+resilience4j.circuitbreaker.instances.inventory.event-consumer-buffer-size=10
+##Non cambiare lo stato in automatico ma riprovare il servizio tot volte
+resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
+##Chiamate prima di cambiare stato
+resilience4j.circuitbreaker.instances.inventory.slidingWindowSize=5
+##Percentuale di chiamate andate male
+resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+resilience4j.timelimiter.instances.inventory.timeout-duration=3s
+
+resilience4j.retry.instances.inventory.max-attempts=3
+resilience4j.retry.instances.inventory.wait-duration=5s
